--- a/responsive.css
+++ b/responsive.css
@@ -1,10 +1,18 @@
 @media all and (min-width: 1700px) {
+    nav, .profile, .experience, #contact, footer  {
+        display: none;
+    }
+    
     .bav {
         display: flex;
     }
 }
 
 @media all and (max-width: 1175px) {
+    nav, .profile, .experience, #contact, footer  {
+        display: none;
+    }
+    
     .sav {
         display: flex;
     }
