--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,6 +5,10 @@
     box-sizing: border-box;
 }
 
+html {
+    scroll-behavior: smooth;
+  }
+
 a {
     text-decoration: none;
     color: black;
@@ -80,7 +84,7 @@ nav {
 }
 
 .prof-right img {
-    width: 80%;
+    width: 400px;
     float: right;
 }
 
@@ -134,31 +138,30 @@ nav {
 /* Experience */
 .ex-top {
     position: relative;
-    top: 210px;
+    margin-top: 15%;
     height: 179.75px;
     background-image: url(img/bg/1.png);
     background-size: cover;
 }
 
 #experiences {
-    position: relative;
-    top: 180px;
-    height: 1550px;
+    position: static;
+    margin-top: -2%;
+    padding-bottom: 100px;
     background-image: url(img/bg/2.png);
 }
 
 .ex-bot {
     position: relative;
-    top: 180px;
     background-image: url(img/bg/3.png);
-    height: 179.75px;
+    height: 200.75px;
     background-size: cover;
     z-index: -1;
 }
 
 #experiences .container {
     position: relative;
-    top: 70px;
+    padding-top: 90px;
 }
 
 #experiences h1 {
@@ -211,6 +214,7 @@ nav {
     width: 160px;
     font-size: 13px;
     margin: 30px auto 0 auto;
+    letter-spacing: 0.3px;
 }
 
 /* project */
@@ -228,6 +232,7 @@ nav {
 .projects {
     margin: 40px auto 0 auto;
     text-align: center;
+    padding: 0 10px;
 }
 
 .cmp {
@@ -236,7 +241,7 @@ nav {
 
 .project img {
     background-color: white;
-    height: 230px;
+    /* img size: 1898x886 */
     width: 500px;
     border-radius: 7px;
     box-shadow: 10px 10px 20px 1px black;
@@ -248,13 +253,13 @@ nav {
     width: 400px;
     font-size: 13px;
     margin: 20px auto;
+    letter-spacing: 0.8px;
 }
 
 /* contact */
 #contact {
     position: relative;
-    top: 160px;
-    padding: 50px 0;
+    margin-top: 10%;
 }
 
 .contact {
@@ -307,7 +312,7 @@ nav {
 footer div {
     position: relative;
     height: 50px;
-    top: 180px;
+    margin-top: 10%;
     width: 100%;
 }
 
